# tugboat

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  requirements.txt  search.json  setup.cfg  sitemap.xml
.aspell/: defaults.R  tugboat.rds
.github/workflows/: R-CMD-check.yaml
R/: binderize.R  build.R  create.R  dockerfile.R  utils.R
examples/: README.md
examples/bolasso/: .gitignore  README.md  index.qmd  run.R
examples/diff_dockerfile_and_context/: .gitignore  run.R
examples/ggplot2/: README.md  plot.R  run.R
examples/housing-prices/: README.md  index.qmd  requirements.txt
examples/info-networks/: README.md  requirements.txt
examples/info-networks/src/: code.py  ps2.qmd
examples/simple/: README.md  dependencies.R  run.R
gangway/: cli.py  convert.py  ui.py
inst/: WORDLIST
man/: binderize.Rd  build.Rd  create.Rd  init_renv.Rd
news/: index.html  index.md
reference/: binderize.html  binderize.md  build.html  build.md  create.html  create.md  index.html  index.md  init_renv.html
reference/figures/: hex-sticker.R
scripts/: install_pandoc.sh
src/: build.py  cli.py  config.py  construct.py  run.py  utils.py  validators.py
tests/: testthat.R
tests/testthat/: test-binderize.R  test-build.R  test-create.R
tugboat/: build.py  cli.py  config.py  construct.py  run.py  utils.py  validators.py
