[metadata]
name = gangway
version = 0.0.1
author = Daniel Molitor
description = Generate and interact with a Docker image created from a local directory.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
    click
    PyYAML >= 6.0
python_requires = >= 3.8
setup_requires = setuptools

[options.entry_points]
console_scripts =
    gangway = gangway.cli:execute

[options.packages.find]
exclude = 
    examples*
    .Rhistory
    .Rprofile
    .Rproj.user*
    gangway.Rproj
    renv.lock